--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Django==4.2.8
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+firebase-admin==6.4.0
+Pillow==10.1.0
+python-dotenv==1.0.1
 Faker==20.1.0
 
 pylint==3.0.2
