--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==4.1.3"
+django = "==4.2.8"
 djangorestframework = "==3.14.0"
-django-cors-headers = "==3.13.0"
-pytest = "*"
-faker = "*"
+django-cors-headers = "==4.3.1"
+pytest = "==7.4.3"
+faker = "==20.1.0"
 autopep8 = "==2.0.0"
-pylint = "==2.15.5"
-pylint-django = "==2.5.3"
-firebase-admin = "*"
+pylint = "==3.0.2"
+pylint-django = "==2.5.5"
+firebase-admin = "==6.4.0"
+pillow = "==10.1.0"
+python-dotenv = "==1.0.1"
+pylint-plugin-utils = "==0.8.2"
+pytest-django = "==4.7.0"
 
 [dev-packages]
 autopep8 = "2.0.0"
