--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ djangorestframework==3.14.0
 firebase-admin==6.4.0
 Pillow==10.1.0
 python-dotenv==1.0.1
+gunicorn==21.2.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
 Faker==20.1.0
 
 pylint==3.0.2
