Update for Heroku deployment

--- a/Pipfile
+++ b/Pipfile
@@ -7,22 +7,21 @@ name = "pypi"
 django = "==4.2.8"
 djangorestframework = "==3.14.0"
 django-cors-headers = "==4.3.1"
-pytest = "==7.4.3"
-faker = "==20.1.0"
-autopep8 = "==2.0.0"
-pylint = "==3.0.2"
-pylint-django = "==2.5.5"
 firebase-admin = "==6.4.0"
 pillow = "==10.1.0"
 python-dotenv = "==1.0.1"
-pylint-plugin-utils = "==0.8.2"
-pytest-django = "==4.7.0"
+gunicorn = "==21.2.0"
+dj-database-url = "==2.1.0"
+whitenoise = "==6.6.0"
+faker = "==20.1.0"
 
 [dev-packages]
-autopep8 = "2.0.0"
-pylint = "2.15.5"
-pylint-django = "2.5.3"
-pytest-django = "*"
+pytest = "==7.4.3"
+pytest-django = "==4.7.0"
+pylint = "==3.0.2"
+pylint-django = "==2.5.5"
+pylint-plugin-utils = "==0.8.2"
+autopep8 = "==2.0.0"
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
