--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ firebase-admin = "==6.4.0"
 pillow = "==10.1.0"
 python-dotenv = "==1.0.1"
 gunicorn = "==21.2.0"
-dj-database-url = "==2.1.0"
+dj-database-url = "*"
 whitenoise = "==6.6.0"
 faker = "==20.1.0"
 
