--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "==21.2.0"
 dj-database-url = "*"
 whitenoise = "==6.6.0"
 faker = "==20.1.0"
+psycopg2-binary = "*"
 
 [dev-packages]
 pytest = "==7.4.3"
