--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==21.2.0
 dj-database-url==2.1.0
 whitenoise==6.6.0
 Faker==20.1.0
+psycopg2-binary==2.9.9
 
 pylint==3.0.2
 pylint-django==2.5.5
